...
    this.genreFilter,
    this.ruleSet,
  }) : trackIds = trackIds ?? [];

  factory MusicPlaylist.favorites() => MusicPlaylist(
        id: favoritesId,
        name: 'Favorites',
        isSystem: true,
      );

  factory MusicPlaylist.disliked() => MusicPlaylist(
        id: dislikedId,
        name: "Don't really like",
...
